--- a/status/2022-02-15.md
+++ b/status/2022-02-15.md
@@ -1,12 +1,14 @@
-# Status Report - 15th February, 2021
+# Status Report - 15th February, 2022
 
-This week I mainly focused on writing up cactus reduction, and coming up with proofs of various important properties of cactus reduction (namely that diameter is preserved, and that colourings of the resulting trees can be extended to the original cactus). The main part of each of these proofs is that vertices never get farther apart after cactus reduction - if two vertices are adjacent, then whatever they're mapped to after cactus reduction is also adjacent, and then the distance of any pair of vertices follows by induction.
+This week I mainly focused on writing up cactus reduction, and coming up with proofs of various important properties of cactus reduction (namely that diameter is preserved, and that colourings of the resulting trees can be extended to the original cactus). The main part of each of these proofs is that vertices never get farther apart after cactus reduction - if two vertices are adjacent, then whatever they're mapped to after cactus reduction is also adjacent (or a vertex in that pair is deleted which is fine here too), and then the distance of any pair of vertices follows by taking the path between them, even if some other shorter path appears between them. [I need to tidy up the proofs here, but I'll probably put this part into its own lemma]
 
 I also tried an example of cactus reduction on the cactus graph that's just a cycle, which highlighted something important. For example, with a cycle containing 100 vertices, we know it can contain 25 red clusters, but the path from cactus reduction has 51 vertices and can only contain 17 red clusters, so just because the cycle being folded is "balanced" doesn't mean that we might not be optimal. And this is before we consider anything else like additional vertices adjacent to the cycle and so on.
 
 # Next week
 
-Explore the idea that Will mentioned about assuming the cycles we fold are "balanced" to begin with - the cycle example dashes my hopes that balanced cycles lead to perfect solutions, but maybe we can get some useful bounds?
+Maybe add a little point about the complexity of cycle folding (and hence cactus reduction), mainly to justify that this procedure is practical for larger graphs. We know caterpillar colouring in O(n) for a graph with n vertices, and I'm tempted to say it's likely the same for trees and probably cacti?
+
+Explore the idea that Will mentioned about assuming the cycles we fold are "balanced" to begin with - the cycle example dashes my hopes that balanced cycles lead to perfect solutions, but maybe we can get some useful bounds? I should try some examples where I have a cycle and a few little bits hanging off the cycle, to see if that makes a difference, or potentially makes things worse.
 
 After this, then consider what can happen when cycles are "unbalanced" - I think I can use similar reasoning to trees to show that they can't be *too* unbalanced, and this will form the core part of my reasoning for developing bounds. (Indeed, I might be able to use some results from the trees section? I suppose it depends on how strongly I use that there's no cycles...)
 
